--- a/src/app/github-profile/components/user-information/search-user/search-user.component.html
+++ b/src/app/github-profile/components/user-information/search-user/search-user.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="myForm" (ngSubmit)="setUserData(searchBar?.value)" class="search-field">
     <input (focus)="onSelected(true)" formControlName="searchBar" type="text" id="search" />
     <button [disabled]="myForm.invalid || isSearching" type="submit">
-      <img class="search-icon" src="/assets/icons/search-2.svg" />Search
+      <img class="search-icon" src="assets/icons/search-2.svg" />Search
     </button>
   </form>
   <div *ngIf="userList && userList.total_count !== 0 && isSelected" class="autocomplete">
